# nazarov_oop_c-

./: CMakeLists.txt  README.md  main.cpp
app/: baseapp.cpp  baseapp.h
build_scripts/linux/: configure.sh
build_scripts/linux/sdl2/cmake/: sdl2-config.cmake
build_scripts/linux/sdl2_image/cmake/: sdl2_image-config.cmake
composite/: composite.h
graphics/: atlas.cpp  atlas.h  graphics.cpp  graphics.h
resources/images/sqlite-tools-osx-x86-3430200/: sqldiff  sqlite3  sqlite3_analyzer
snake/: snake.h
ztyp/: ztyp.h
